examples/i32.const.wast
(i32.const 4294967295)
(i32.const 4294967295)
(i32.const 4294967294)
(i32.const 2147483647)
(i32.const -2147483647)
(i32.const -2147483648)
(invoke "foo" )
(assert_invalid)
(assert_unlinkable)
(module binary "\09")
(module quote "xkjasdf")
